[package]
name = "mcre-workers-do-timeouts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
serde-wasm-bindgen = "0.5.0"
futures-util = "0.3.30"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
